--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,22 @@
 server.port=9090
+spring.application.name=smartbank-transaction-service
+server.servlet.context-path=/api/transaction
+
+
 spring.mvc.view.prefix=WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+
+#eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+#indicates the frequency the client sends heartbeat to server to indicate that it is alive.
+eureka.instance.lease-renewal-interval-in-seconds=30
+#indicates the duration the server waits since it received the last heartbeat before it can evict an instance from its registry
+eureka.instance.lease-expiration-duration-in-seconds=90
+
+#load balancing
+ribbon.eureka.enabled=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+tx.properties.url=http://localhost:8765/api/transaction/api/transaction
